# prusti-dev

./: .failures  .gitignore  Cargo.toml  ref.vpr  run.sh  rust-toolchain  shell.nix  test-rpe.sh  viper-toolchain
.cargo/: config.toml
analysis/: Cargo.toml
analysis/src/: mir_utils.rs
benchmark-output/: benchmark1659713052.9338539.json  benchmark1663137112.7272847.json  log
debug-info/: Cargo.toml
jni-gen/: Cargo.toml
jni-gen/src/: wrapper_generator.rs
jni-gen/systest/: Cargo.toml
local-testing/: name_clash.rs  simple2.vpr  test.rs
local-testing/generics/: aurel.rs  nested.rs  nested2.rs  nested_simple.rs  pair.rs  pair2.rs  point.rs  structs.rs
mir-ssa-analysis/src/: lib.rs
mir-state-analysis/: Cargo.toml
mir-state-analysis/src/: lib.rs
prusti/: Cargo.toml  build.rs
prusti-common/: Cargo.toml
prusti-contracts-impl/src/: lib.rs
prusti-contracts-internal/: Cargo.toml
prusti-contracts-internal/src/: lib.rs
prusti-contracts/src/: lib.rs
prusti-encoder/: Cargo.toml
prusti-encoder/src/: debug.rs  generic_args_support.rs  intern.rs  lib.rs  loops.rs  request.rs  sctx.rs  trait_support.rs  util.rs
prusti-encoder/src/encoder_traits/: function_enc.rs  impure_function_enc.rs  mod.rs  pure_func_app_enc.rs  pure_function_enc.rs
prusti-encoder/src/encoders/: aggregate_snap_args_cast.rs  assign.rs  builtin_trait_impl.rs  const.rs  generic.rs  local_def.rs  mir_base.rs  mir_builtin.rs  mir_impure.rs  mir_poly_impure.rs  mir_pure.rs  mir_pure_function.rs  mod.rs  pure_func_app.rs  pure_generic_cast.rs  spec.rs  sym_impure.rs  sym_pure.rs  trait.rs  trait_impl.rs  trait_ty_args.rs  typ.rs  user_defined_trait_impl.rs  util.rs  viper_tuple.rs
prusti-encoder/src/encoders/mono/: mir_impure.rs  mir_pure_function.rs  mod.rs  task_description.rs
prusti-encoder/src/encoders/pure/: aggregate_snap_args.rs  mod.rs  spec.rs  sym_spec.rs
prusti-encoder/src/encoders/sym/: assertion.rs  backwards.rs  builtin.rs  expr.rs  function.rs  mod.rs  old.rs  transformer.rs
prusti-encoder/src/encoders/sym/expr/: fn_call.rs  mod.rs  ref.rs
prusti-encoder/src/encoders/sym/impure/: forward_backwards_shared.rs  mod.rs
prusti-encoder/src/encoders/type/: capability.rs  domain.rs  generic_cast.rs  generic_predicate.rs  generic_snapshot.rs  lifted.rs  lifted_func_app_generics.rs  lifted_func_def_generics.rs  lifted_generic.rs  lifted_ty_function.rs  mod.rs  most_generic_ty.rs  predicate.rs  rust_ty_generic_cast.rs  rust_ty_predicates.rs  rust_ty_snapshots.rs  snapshot.rs  ty_param.rs  viper_tuple.rs
prusti-encoder/src/encoders/type/lifted/: aggregate_cast.rs  cast.rs  cast_functions.rs  casters.rs  func_app_ty_params.rs  func_def_ty_params.rs  generic.rs  mod.rs  rust_ty_cast.rs  ty.rs  ty_constructor.rs
prusti-interface/: Cargo.toml
prusti-interface/src/: prusti_error.rs  utils.rs
prusti-rustc-interface/src/: lib.rs
prusti-server/: Cargo.toml
prusti-server/src/: backend.rs  client.rs  driver.rs  (+4 more)
prusti-tests/: Cargo.toml
prusti-utils/: Cargo.toml
prusti-viper/: Cargo.toml
prusti/src/: callbacks.rs  driver.rs  verifier.rs
symbolic-execution/: Cargo.toml
symbolic-execution/src/: havoc.rs  heap.rs  lib.rs  path.rs  path_conditions.rs  place.rs  value.rs
test-crates/: Cargo.toml
viper/: Cargo.toml
viper-sys/: Cargo.toml  build.rs
vir/: Cargo.toml
visualization/: .gitignore  index.html
(+413 files in other folders)
