[workspace]
members = [
    #"analysis",
    "jni-gen",
    "prusti",
    "prusti-contracts-build",
    "prusti-encoder",
    # "prusti-tests",
    "prusti-utils",
    "prusti-viper",
    "tracing",
    "mir-state-analysis",
    "mir-ssa-analysis",
    "prusti-interface",
    "prusti-server",
    "prusti-launch",
    "prusti-smt-solver",
    "prusti-rustc-interface",
    "smt-log-analyzer",
    "task-encoder",
    # "test-crates",
    "viper",
    # "viper-defs",
    "viper-sys",
    "vir",
    "vir-proc-macro",
]
resolver = "2"

[profile.dev]
debug = 1

[profile.test]
debug = 1

[profile.release]
# Enable after fixing https://github.com/viperproject/prusti-dev/issues/383
# lto = true
# codegen-units = 1
# Enable when profiling
# debug = true
