[package]
name = "prusti-encoder"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
cfg-if = "1.0.0"
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
prusti-interface = { path = "../prusti-interface" }
mir-ssa-analysis = { path = "../mir-ssa-analysis" }
# mir-state-analysis = { path = "../mir-state-analysis" }
pcs = { path = "../../pcs" }
task-encoder = { path = "../task-encoder" }
vir = { path = "../vir" }
tracing = { path = "../tracing" }
symbolic-execution = { path = "../../symbolic-execution" }
serde_json = "1.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[features]
default = ["mono_function_encoding"]
vir_debug = ["vir/vir_debug"]
mono_function_encoding = []
