[package]
name = "symbolic-execution"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
debug-info = { path = "../debug-info" }
bumpalo = { version = "3.12.0", features = ["collections"] }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
pcs = { path = "../../pcs" }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
